@@ -3,8 +3,13 @@ package com.votify.handlers;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
+import com.fasterxml.jackson.databind.exc.InvalidFormatException;
+import com.votify.enums.SortSession;
 import com.votify.exceptions.*;
 import com.votify.helpers.UtilHelper;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -13,14 +18,17 @@ import org.springframework.web.servlet.resource.NoResourceFoundException;
 import com.fasterxml.jackson.databind.exc.InvalidFormatException;
 import com.fasterxml.jackson.databind.exc.UnrecognizedPropertyException;
 import com.votify.models.CustomErrorResponse;
+
+import java.time.LocalDateTime;
 import java.util.*;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
-    
+
     private final UtilHelper utilHelper = new UtilHelper();
     private static final Logger logger = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
@@ -38,24 +46,26 @@ public class GlobalExceptionHandler {
     public ResponseEntity<CustomErrorResponse> handlerConflict(ConflictException ex) {
         return new ResponseEntity<>(new CustomErrorResponse(ex.getMessage()), HttpStatus.CONFLICT);
     }
-    
+
     @ExceptionHandler(HttpMessageNotReadableException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ResponseEntity<Map<String, Object>> handleHttpMessageNotReadable(HttpMessageNotReadableException ex) {
         Map<String, Object> response = new HashMap<>();
         List<String> errors = new ArrayList<>();
-        
+
         String message = "Invalid request body format";
-        
-        if (ex.getCause() instanceof UnrecognizedPropertyException) {
-            UnrecognizedPropertyException unrecognizedEx = (UnrecognizedPropertyException) ex.getCause();
+
+        if (ex.getCause() instanceof UnrecognizedPropertyException unrecognizedEx) {
             String propertyName = unrecognizedEx.getPropertyName();
             message = "Unknown field: '" + propertyName + "' is not recognized";
             errors.add("Property '" + propertyName + "' is not allowed");
-        } else if (ex.getCause() instanceof InvalidFormatException) {
-            InvalidFormatException invalidFormatEx = (InvalidFormatException) ex.getCause();
-            message = "Invalid format for field: " + invalidFormatEx.getPath().get(0).getFieldName();
-            errors.add("Invalid value format for field '" + invalidFormatEx.getPath().get(0).getFieldName() + "'");
+        } else if (ex.getCause() instanceof InvalidFormatException invalidFormatEx) {
+            message = "Invalid format for field: " + invalidFormatEx.getPath().getFirst().getFieldName();
+            errors.add("Invalid value format for field '" + invalidFormatEx.getPath().getFirst().getFieldName() + "'");
+        } else if (ex.getCause() instanceof InvalidFormatException formatException) {
+            if (formatException.getTargetType().equals(LocalDateTime.class)) {
+                message = "Invalid date format";
+            }
         } else {
             errors.add("Invalid JSON format");
         }
@@ -63,23 +73,23 @@ public class GlobalExceptionHandler {
         if (logger.isTraceEnabled()) {
             logger.trace("JSON parsing error", ex);
         }
-        
+
         response.put("message", message);
         response.put("errors", errors);
         return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
     }
-    
+
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ResponseEntity<Map<String, Object>> handleValidationExceptions(
-            MethodArgumentNotValidException ex) {
+        MethodArgumentNotValidException ex) {
         Map<String, Object> response = new HashMap<>();
         List<String> errors = new ArrayList<>();
-        
-        ex.getBindingResult().getFieldErrors().forEach(error -> 
+
+        ex.getBindingResult().getFieldErrors().forEach(error ->
             errors.add(error.getField() + ": " + error.getDefaultMessage())
         );
-        
+
         response.put("message", "Validation error");
         response.put("errors", errors);
         return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
@@ -126,6 +136,12 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(new CustomErrorResponse(ex.getMessage()), HttpStatus.NOT_FOUND);
     }
 
+    @ExceptionHandler(AgendaNotFoundException.class)
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    public ResponseEntity<CustomErrorResponse> handleAgendaNotFound(AgendaNotFoundException ex) {
+        return new ResponseEntity<>(new CustomErrorResponse(ex.getMessage()), HttpStatus.NOT_FOUND);
+    }
+
     @ExceptionHandler(Exception.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ResponseEntity<CustomErrorResponse> handlerGenericException(Exception ex) {
@@ -135,7 +151,7 @@ public class GlobalExceptionHandler {
                 logger.debug("Exception details:", ex);
             }
         }
-        return new ResponseEntity<>(new CustomErrorResponse("An unknown error occurred"), 
-                HttpStatus.INTERNAL_SERVER_ERROR);
+        return new ResponseEntity<>(new CustomErrorResponse("An unknown error occurred"),
+            HttpStatus.INTERNAL_SERVER_ERROR);
     }
 }
